# arkanoid

./: Arkanoid  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arkanoid.c  block.c  block.h  cmake_install.cmake  constants.h  draw.c  draw.h  game.c  game_state.h  init.c  init.h  main.c  menu.c  menu.h  update.c  update.h
level/: lvl1.txt  lvl2.txt  lvl3.txt  lvl4.txt
